--- a/dropium-checktoken-nft/package.json
+++ b/dropium-checktoken-nft/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nfteyez/sol-rayz": "^0.10.2",
     "@solana/spl-token": "^0.3.6",
     "@solana/web3.js": "^1.69.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.0.3",
+    "assert": "^2.0.0",
+    "axios": "^1.2.1",
+    "crypto-browserify": "^3.12.0",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -41,6 +46,7 @@
   },
   "devDependencies": {
     "@types/bs58": "^4.0.1",
+    "@types/node": "^18.11.11",
     "@types/styled-components": "^5.1.26"
   }
 }
