--- a/dropium-checktoken-nft/package.json
+++ b/dropium-checktoken-nft/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@moralisweb3/common-sol-utils": "^2.8.2",
     "@nfteyez/sol-rayz": "^0.10.2",
     "@solana/spl-token": "^0.3.6",
     "@solana/web3.js": "^1.69.0",
@@ -13,11 +14,13 @@
     "assert": "^2.0.0",
     "axios": "^1.2.1",
     "crypto-browserify": "^3.12.0",
+    "moralis": "^2.8.2",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
+    "theblockchainapi": "^1.0.9407",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
